# ai

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
backup/img_stream_inference/: README.md  app.py  app.spec  pipeline.py  pyproject.toml  run_simple.py
backup/img_stream_inference/interface/: convert2labelme.py
backup/img_stream_inference/interface/grpc/: grpc_api.py  grpc_module.proto  grpc_module_pb2.py  grpc_module_pb2_grpc.py
backup/img_stream_inference/interface/https/: https_api.py
backup/img_stream_inference/model_evaluation/: eval_report.py  matcher.py  vision.py
backup/img_stream_inference/semantic_segmentation/: ss_IoU.py  ss_utils.py  ss_visualization.py
client/: auth.py
client/image_infer/grpc/: __init__.py  api.py  grpc_module_pb2.py  grpc_module_pb2_grpc.py
client/image_infer/https/: __init__.py  api.py
core/config/: __init__.py
core/converters/: __init__.py  labelme.py
core/data/: __init__.py
core/interfaces/: __init__.py
dataset/measure/: asymmetric_dot_calibration.py
eval/object_detection/: __init__.py  matcher.py  metrics.py  runner.py  visualizer.py
eval/semantic_segmentation/: __init__.py  labels.py  metrics.py  runner.py  visualizer.py
examples/: auth_examples.py
src/: .gitignore  README.md  main.py  pyproject.toml
src/clients/: auth.py
src/core/labelme/: __init__.py  converter.py
src/eval/detection/: __init__.py  matching.py  report.py  (+1 more)
src/pipeline/: main.py
src/ui/: app.py
src/utils/: exception.py  logger.py
ui/: __init__.py  app.py  streamlit_app.py
utils/: exceptions.py  logger.py
(+12 files in other folders)
