[project]
name = "img-stream-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-tools>=1.73.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]
